@@ -1,0 +1,15 @@
+%copyright%
+
+
+#include "%filethinname%.h"
+/* #include <standard library headers> */
+
+/* #include <other library headers> */
+
+/* #include "custom headers" */
+
+
+int main(int argc, char *argv[])
+{
+    return 0;
+}
