@@ -1,0 +1,29 @@
+%copyright%
+
+
+#ifndef %CLASSNAME%_H_
+#define %CLASSNAME%_H_
+
+
+/* #include <standard library headers> */
+
+/* #include <other library headers> */
+
+/* #include "custom headers" */
+
+
+#ifdef __cplusplus
+extern "C"
+{
+#endif
+
+
+int main(int argc, char *argv[]);
+
+
+#ifdef __cplusplus
+}
+#endif
+
+
+#endif /* %CLASSNAME%_H_ */
