@@ -1,0 +1,40 @@
+/* -*- mode: C++; -*- */
+%copyright%
+
+
+#ifndef %CLASSNAME%_H_
+#define %CLASSNAME%_H_
+
+
+// #include <standard C library headers>
+
+// #include <standard C++ library headers>
+
+// #include <other library headers>
+
+// #include "custom headers"
+
+
+/**
+ * %ClassName% class
+ */
+class %ClassName%
+{
+public:
+    %ClassName%();
+    /*virtual*/ ~%ClassName%();
+
+private:
+    %ClassName%(const %ClassName%& rhs);
+    %ClassName%& operator=(const %ClassName%& rhs);
+
+public:
+
+protected:
+
+private:
+
+};
+
+
+#endif // %CLASSNAME%_H_
