@@ -1,0 +1,39 @@
+%copyright%
+
+
+#ifndef %CLASSNAME%_HPP_
+#define %CLASSNAME%_HPP_
+
+
+// #include <standard C library headers>
+
+// #include <standard C++ library headers>
+
+// #include <other library headers>
+
+// #include "custom headers"
+
+
+/**
+ * %ClassName% class
+ */
+class %ClassName%
+{
+public:
+    %ClassName%() {}
+    /*virtual*/ ~%ClassName%() {}
+
+private:
+    %ClassName%(const %ClassName%& rhs);
+    %ClassName%& operator=(const %ClassName%& rhs);
+
+public:
+
+protected:
+
+private:
+
+};
+
+
+#endif // %CLASSNAME%_HPP_
