@@ -1,0 +1,36 @@
+/**
+ * Copyright (C) %year% %authorname%
+ *
+ * This code has been released into the Public Domain.
+ * You may do whatever you like with it.
+ *
+ * @file
+ * @author %authorname% <%email%>
+ * @date %date%
+ */
+
+
+#include "%filethinname%.h"
+// #include <standard C library headers>
+
+// #include <standard C++ library headers>
+
+// #include <other library headers>
+
+// #include "custom headers"
+
+
+/**
+ * constructor
+ */
+%ClassName%::%ClassName%()
+{
+}
+
+
+/**
+ * destructor
+ */
+%ClassName%::~%ClassName%()
+{
+}
