@@ -1,0 +1,18 @@
+%copyright%
+
+
+// package
+
+// import standard library class
+
+// import other library class
+
+// import custom class
+
+
+/**
+ * %ClassName% class
+ */
+public class %ClassName% extends java.lang.Object {
+
+}
