@@ -1,0 +1,24 @@
+/* -*- mode: ObjC; -*- */
+%copyright%
+
+
+// #import <standard C library headers>
+
+// #import <standard ObjectiveC library headers>
+#import <Cocoa/Cocoa.h>
+
+// #import <other library headers>
+
+// #import "custom headers"
+
+
+/**
+ * %ClassName% class
+ */
+@interface %ClassName% : NSObject {
+}
+
+- (id)init;
+- (void)dealloc;
+
+@end
