@@ -1,0 +1,44 @@
+%copyright%
+
+
+#import "%filethinname%.h"
+// #import <standard C library headers>
+
+// #import <standard ObjectiveC library headers>
+
+// #import <other library headers>
+
+// #import "custom headers"
+
+
+@interface %ClassName% (Private)
+
+@end
+
+
+@implementation %ClassName%
+
+/**
+ * constructor
+ */
+- (id)init {
+    self = [super init];
+    if (self != nil) {
+    }
+    return self;
+}
+
+
+/**
+ * destructor
+ */
+- (void)dealloc {
+    [super dealloc];
+}
+
+@end
+
+
+@implementation %ClassName% (Private)
+
+@end
